...
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout android:id="@+id/fragment_transaction_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dialog_padding"
            android:stretchColumns="1"
            android:orientation="vertical" >

            <TableRow style="@style/FormRow">
                <AutoCompleteTextView
                    android:id="@+id/input_transaction_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:completionThreshold="1"
                    android:hint="@string/label_transaction_name"
                    android:inputType="textCapSentences"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:nextFocusDown="@+id/input_transaction_amount"
                    android:background="@android:color/transparent"
                    android:textSize="22sp">
                    <requestFocus/>
                    </AutoCompleteTextView>
            </TableRow>

...
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_transaction_amount"
                    android:inputType="none"
                    android:singleLine="true"
                    android:nextFocusDown="@+id/input_description"
                    android:background="@android:color/transparent"
                    android:textColor="@color/debit_red"
                    android:textSize="20sp"
                    android:textIsSelectable="true"
                    gnucash:keyboardKeysLayout="@xml/calculator_keyboard"/>

                <ImageView android:id="@+id/btn_split_editor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="Open split editor"
                    android:src="@drawable/content_split_holo_light" />

                <org.gnucash.android.ui.util.widget.TransactionTypeSwitch
                    android:id="@+id/input_transaction_type"
                    android:layout_width="0dp"
                    android:layout_weight="2.5"
                    android:layout_height="wrap_content"
                    android:textOn="@string/label_debit"
                    android:textOff="@string/label_credit"
                    android:gravity="end|center_vertical"
...
                style="@style/FormRow" >

                <ImageView style="@style/FormIcon"
                    android:src="@drawable/ic_action_forward"/>

                <org.gnucash.android.ui.util.widget.searchablespinner.SearchableSpinnerView
                    android:id="@+id/input_transfer_account_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    />
            </TableRow>
            <View style="@style/Divider" />
            <TableRow style="@style/FormRow" >

                <ImageView style="@style/FormIcon"
                    android:src="@drawable/ic_action_time"/>

                <TextView android:id="@+id/input_date"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:gravity="center"      />

                <TextView android:id="@+id/input_time"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:gravity="center"        />
            </TableRow>
            <View style="@style/Divider" />
...
