...
    <string name="title_edit_account">Edit Account</string>
    <string name="description_add_transaction_icon">Add a new transaction to an account</string>
    <string name="description_view_account_icon">View account details</string>
    <string name="label_no_accounts">No accounts to display</string>
    <string name="label_account_name">Account name</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_test">Test</string>
    <string name="label_passcode">Enter Passcode</string>
    <string name="toast_wrong_passcode">Wrong passcode, please try again</string>
    <string name="toast_passcode_set">Passcode set</string>
    <string name="label_confirm_passcode">Please confirm your passcode</string>
    <string name="toast_invalid_passcode_confirmation">Invalid passcode confirmation. Please try again</string>
    <string name="label_transaction_name">Description</string>
    <string name="label_transaction_amount">Amount</string>
    <string name="title_add_transaction">New transaction</string>
    <string name="label_no_transactions">No transactions to display</string>
    <string name="label_debit">DEBIT</string>
    <string name="label_credit">CREDIT</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_transactions">Transactions</string>
    <string name="menu_delete">Delete</string>
    <string name="alert_dialog_ok_delete">Delete</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="toast_account_deleted">Account deleted</string>
    <string name="title_confirm_delete">Confirm delete</string>
    <string name="title_edit_transaction">Edit Transaction</string>
    <string name="label_transaction_description">Add note</string>
...
        - Adds CSV export format \n
        - Improve compatibility with GnuCash desktop files\n
        - Limit space usage by backups \n
        - Multiple bug fixes and enhancements\n
	</string>
	<string name="label_dismiss">Dismiss</string>
    <string name="toast_transanction_amount_required">Enter an amount to save the transaction</string>
    <string name="toast_error_importing_accounts">An error occurred while importing the GnuCash accounts</string>
    <string name="toast_success_importing_accounts">GnuCash Accounts successfully imported</string>
    <string name="summary_import_accounts">Import account structure from GnuCash XML</string>
    <string name="title_import_accounts">Import GnuCash XML</string>
    <string name="summary_delete_all_accounts">Delete all accounts in the database. All transactions will be deleted as
        well.
...
    <string name="summary_create_default_accounts">Creates default GnuCash commonly-used account structure</string>
    <string name="title_create_default_accounts">Create default accounts</string>
    <string name="msg_confirm_create_default_accounts_setting">A new book will be opened with the default accounts\n\nYour current accounts and transactions will not be modified!</string>
    <string name="title_scheduled_transactions">Transactions</string>
    <string name="title_select_export_destination">Select destination for export</string>
    <string name="hint_split_memo">Memo (Click to add)</string>
    <string name="label_spend">Spend</string>
    <string name="label_receive">Receive</string>
    <string name="label_withdrawal">Withdrawal</string>
    <string name="label_deposit">Deposit</string>
    <string name="label_payment">Payment</string>
    <string name="label_charge">Charge</string>
    <string name="label_decrease">Decrease</string>
    <string name="label_increase">Increase</string>
...
    <string name="title_transfer_funds">Transfer Funds</string>
    <string name="nav_menu_help"><![CDATA[Help & Feedback]]></string>
    <string name="label_select_pie_slice_to_see_details">Select a slice to see details</string>
    <string name="label_report_period">Period:</string>
    <string name="label_convert_from">From:</string>
    <string name="label_convert_to">To:</string>
    <string name="msg_provide_exchange_rate">Provide either the converted amount or exchange rate in order to transfer funds</string>
    <string name="hint_exchange_rate">Exchange rate</string>
    <string name="btn_fetch_quote">Fetch quote</string>
    <string name="hint_converted_amount">Converted Amount</string>
    <string name="title_report_sheet">Sheet</string>
    <string name="label_last_3_months_expenses">Expenses for last 3 months</string>
    <string name="label_total_assets">Total Assets</string>
...
