...
            android:layout_marginTop="6dp"
            android:layout_marginBottom="@dimen/dialog_padding"
            android:layout_marginLeft="@dimen/dialog_padding"
            android:layout_marginRight="52dp"/>

        <ImageView
            android:id="@+id/options_menu"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:paddingTop="20dp"
...
            android:paddingLeft="24dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_more_vert_black_24dp"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/edit_transaction"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:paddingTop="6dp"
            android:paddingRight="6dp"
...
